fixed issue with visited links not being visible on certain themes

--- a/public/css/contact.css
+++ b/public/css/contact.css
@@ -10,5 +10,5 @@
 }
 
 .contact-text a{
-    color: var(--text-color);
+    color: var(--background-game);
 }
