--- a/public/css/downloads.css
+++ b/public/css/downloads.css
@@ -10,5 +10,9 @@
 }
 
 .download a{
-    color: var(--text-color);
+    color: var(--background-game);
+}
+
+.download a:visited{
+    color: var(--background-game);
 }
